@@ -1,3 +1,7 @@
+2003-10-09  Bernie Solomon  <bernard@ugsolutions.com>
+
+	* mono/tests/libtest.c: fix after merge of pinvoke2.cs
+
 2003-10-07  Bernie Solomon  <bernard@ugsolutions.com>
 
 	* mono/tests/Makefile.am mono/tests/libtest.c
